At this moment the unit testing classes extend from the test case