@@ -82,25 +82,8 @@ android {
 //            exclude 'META-INF/LICENSE.txt'
 //            exclude 'META-INF/NOTICE.txt'
 //        }
-    sourceSets{
-        androidTest.setRoot('src/androidTest')
-        androidTest{
-            java.srcDirs('src/androidTest/java/com/stonefacesoft/ottaa/test/unitTesting')
-        }
-    }
-    testOptions {
-        reportDir ="$rootDir/test-results"
-        unitTests {
-            unitTests.includeAndroidResources = true
-            unitTests.returnDefaultValues true
 
-            unitTests.all{
-                jvmArgs '-XX:MaxPermSize=256m'
-                maxHeapSize = "1024m"
-            }
-        }
-        resultsDir="$rootDir/test-results/junit"
-    }
+
     compileOptions {
         targetCompatibility 1.8
         sourceCompatibility 1.8
@@ -172,7 +155,8 @@ dependencies {
 
     //Testing
     testImplementation 'junit:junit:4.13.1'
-    testImplementation 'org.mockito:mockito-core:1.10.19'
+    testImplementation 'org.mockito:mockito-core:2.19.0'
+    testImplementation "org.robolectric:robolectric:3.3.2"
     androidTestImplementation 'androidx.test:core:1.3.0'
 
     // AndroidJUnitRunner and JUnit Rules
@@ -193,8 +177,10 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso.idling:idling-concurrent:3.3.0'
     androidTestImplementation "androidx.navigation:navigation-testing:2.3.4"
     //junit Test
-    androidTestImplementation 'com.android.support:support-annotations:24.0.0'
-    androidTestImplementation 'com.android.support.test:runner:0.5'
+    androidTestImplementation 'com.android.support:support-annotations:28.0.0'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+
+    androidTestImplementation 'org.hamcrest:hamcrest-library:1.3'
 
     // The following Espresso dependency can be either "implementation"
     // or "androidTestImplementation", depending on whether you want the
